--- a/src/sections/Projects.scss
+++ b/src/sections/Projects.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    padding: 8rem 0;
+    padding: 11rem 0;
 
     &-title{
         display: flex;
