--- a/src/sections/Services.scss
+++ b/src/sections/Services.scss
@@ -1,5 +1,5 @@
 .services-section{
-    padding: 8rem 0;
+    padding: 11rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
