--- a/src/sections/Tools.scss
+++ b/src/sections/Tools.scss
@@ -69,7 +69,6 @@
 
         &:hover{
             border: .1rem solid var(--only-1-framer-website-dusty-gray, #969696);
-            cursor: pointer;
 
             & .pill{
                 background-color: var(--color-main-color);
